# theintrosort

./: CMakeLists.txt  README.txt  main.cpp  sortingalgo.cpp  sortingalgo.h  testowy
test/: test.cpp
util/: gen.sh  run.sh
